<resources>
    <string name="app_name">Phones</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registr">Регистрация</string>
    <string name="enter_email">Введите email</string>
    <string name="enter_password">Введите пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="to_registr">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="by_number">По номеру</string>
    <string name="enter">Вход</string>
    <string name="enter_email_number">Введите email/номер</string>
    <string name="auto_enter">Входить автоматически</string>
    <string name="ENTER">ВОЙТИ</string>
    <string name="by_email">По email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="phone_name">Phone Name</string>
    <string name="launch_price_0">Launch Price: $0</string>
    <string name="launch_date">Launch Date: ---</string>
    <string name="camera_score_0">Camera Score: 0</string>
    <string name="fromup">↑ По возрастанию</string>
    <string name="fromdown">↓ По убыванию</string>
</resources>